feat: дописать стили, cделать адаптив

--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,5 +1,5 @@
-.header {
+.footer {
   font-family: 'Inter', 'Arial', sans-serif;
+  color: #fff;
   width: 100%;
-  border-bottom: 1px solid #545454;
 }
