--- a/blocks/body/body.css
+++ b/blocks/body/body.css
@@ -1,7 +1,13 @@
 .body {
   background-color: #000;
-  min-width: 1200px;
-  color: #fff;
   display: flex;
   justify-content: center;
+
+  /*сглаживаем шрифты*/
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased;
+  -webkit-text-size-adjust: 100%;
+  -ms-text-size-adjust: 100%;
+  -moz-text-size-adjust: 100%;
+  text-rendering: optimizeLegibility;
 }
