--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -1,13 +1,12 @@
-.profile__description {
+.footer__copyright {
+  margin: 0;
   font-weight: normal;
   font-size: 18px;
   line-height: 1.22;
-  margin: 0;
-  margin-top: 7px;
 }
 
 @media screen and (max-width: 700px) {
-  .profile__description {
+  .footer__copyright {
     font-size: 14px;
     line-height: 1.21;
   }
