--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,6 +1,12 @@
 .page {
-  width: 880px;
+  max-width: 1280px;
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+@media screen and (max-width: 700px) {
+  .page {
+    min-width: 320px;
+  }
 }
