--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -1,6 +1,7 @@
 .popup__container {
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
   margin: auto;
   background-color: #fff;
   border-radius: 15px;
@@ -8,4 +9,14 @@
   z-index: 2;
   width: 430px;
   height: 330px;
+  padding: 36px;
+  box-sizing: border-box;
+}
+
+@media screen and (max-width: 700px) {
+  .popup__container {
+    width: 282px;
+    height: 322px;
+    padding: 25px 22px;
+  }
 }
