--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -1,9 +1,10 @@
 .popup {
+  font-family: 'Inter', 'Arial', sans-serif;
+  color: #000;
   display: none;
   position: fixed;
   width: 100%;
   height: 100%;
-  background-color: #000;
-  opacity: .5;
+  background-color: rgba(0, 0, 0, .5);
   z-index: 1;
 }
