--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -1,8 +1,24 @@
 .profile__add-button {
   background-image: url('../../../images/profile/add-button.svg');
-  background-size: contain;
+  background-size: 22px;
+  background-position: center;
   background-repeat: no-repeat;
   background-color: #000;
   width: 150px;
   height: 50px;
+  border: 2px solid #fff;
 }
+
+.profile__add-button:hover {
+  cursor: pointer;
+  opacity: .6;
+}
+
+@media screen and (max-width: 900px) {
+  .profile__add-button {
+    background-size: 16px;
+    width: 100%;
+    height: 50px;
+  }
+}
+
