--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -1,8 +1,23 @@
 .profile__edit-button {
   background-image: url('./../../../images/profile/edit-button.svg');
+  background-size: contain;
   width: 24px;
   height: 24px;
   margin-left: -24px;
   position: relative;
   left: calc(24px + 18px);
+}
+
+.profile__edit-button:hover {
+  cursor: pointer;
+  opacity: .6;
+}
+
+@media screen and (max-width: 700px) {
+  .profile__edit-button {
+    width: 18px;
+    height: 18px;
+    margin-left: -18px;
+    left: calc(18px + 10px);
+  }
 }
