--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -2,3 +2,10 @@
   margin-left: 30px;
   margin-right: auto;
 }
+
+@media screen and (max-width: 900px) {
+  .profile__info {
+    margin: 26px auto 33px;
+    text-align: center;
+  }
+}
