--- a/blocks/profile/__description/profile__description.css
+++ b/blocks/profile/__description/profile__description.css
@@ -1,14 +1,18 @@
 .profile__description {
+  max-width: 470px;
   font-weight: normal;
   font-size: 18px;
   line-height: 1.22;
   margin: 0;
   margin-top: 7px;
+
 }
 
 @media screen and (max-width: 700px) {
   .profile__description {
+    max-width: 230px;
     font-size: 14px;
     line-height: 1.21;
+    text-align: center;
   }
 }
