--- a/blocks/popup/__input-text/popup__input-text.css
+++ b/blocks/popup/__input-text/popup__input-text.css
@@ -1,4 +1,5 @@
-.popup__edit-description {
+.popup__input-text {
+  font-family: inherit;
   font-weight: normal;
   font-size: 14px;
   line-height: 2;
