--- a/pages/index.css
+++ b/pages/index.css
@@ -1,4 +1,7 @@
+@import url(../vendor/normalize.css);
 @import url(../vendor/fonts/fonts.css);
+
+@import url(../blocks/page-hover/page-hover.css);
 
 @import url(../blocks/body/body.css);
 
@@ -17,8 +20,9 @@
 @import url(../blocks/popup/__edit-name/popup__edit-name.css);
 @import url(../blocks/popup/__edit-description/popup__edit-description.css);
 @import url(../blocks/popup/__save-button/popup__save-button.css);
+@import url(../blocks/popup/__input-text/popup__input-text.css);
 
-@import url(../blocks/content/content.css);
+
 @import url(../blocks/content/__profile/content__profile.css);
 
 @import url(../blocks/profile/profile.css);
@@ -41,9 +45,3 @@
 
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/footer/__copyright/footer__copyright.css);
-@import url(../blocks);
-@import url(../blocks);
-@import url(../blocks);
-@import url(../blocks);
-@import url(../blocks);
-@import url(../blocks);
