--- a/blocks/element/element.css
+++ b/blocks/element/element.css
@@ -1,8 +1,8 @@
 .element {
   font-family: 'Inter', 'Arial', sans-serif;
   position: relative;
-  width: 282px;
-  height: 361px;
+  max-width: 282px;
+  min-height: 361px;
   background-color: #fff;
   border-radius: 10px;
   overflow: hidden;
