--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,5 +1,6 @@
 .header {
   font-family: 'Inter', 'Arial', sans-serif;
   width: 100%;
-  border-bottom: 1px solid #545454;
+  border-bottom: 1px solid rgb(84, 84, 84, .7);
+  box-sizing: border-box;
 }
