--- a/blocks/popup/__close/popup__close.css
+++ b/blocks/popup/__close/popup__close.css
@@ -1,9 +1,11 @@
 .popup__close {
   background-image: url('./../../../images/popup/close.svg');
-  background-size: 42px;
+  background-size: 29px;
   background-position: center;
-  width: 28px;
-  height: 28px;
+  background-color: transparent;
+  border: none;
+  width: 29px;
+  height: 29px;
   position: absolute;
   top: -32px;
   right: -32px;
@@ -12,4 +14,14 @@
 .popup__close:hover {
   cursor: pointer;
   opacity: .6;
+}
+
+@media screen and (max-width: 700px) {
+  .popup__close {
+    background-size: 20px;
+    width: 20px;
+    height: 20px;
+    top: -42px;
+    right: 8px;
+  }
 }
