--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -7,16 +7,16 @@
   border-radius: 15px;
   position: relative;
   z-index: 2;
-  width: 430px;
-  height: 330px;
+  min-width: 430px;
+  min-height: 330px;
   padding: 36px;
   box-sizing: border-box;
 }
 
 @media screen and (max-width: 700px) {
   .popup__container {
-    width: 282px;
-    height: 322px;
+    min-width: 282px;
+    min-height: 322px;
     padding: 25px 22px;
   }
 }
