--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -3,15 +3,11 @@
   background-size: 22px;
   background-position: center;
   background-repeat: no-repeat;
-  background-color: #000;
+  background-color:transparent;
   width: 150px;
   height: 50px;
   border: 2px solid #fff;
-}
-
-.profile__add-button:hover {
-  cursor: pointer;
-  opacity: .6;
+  box-sizing: border-box;
 }
 
 @media screen and (max-width: 900px) {
