--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -1,16 +1,14 @@
 .profile__edit-button {
   background-image: url('./../../../images/profile/edit-button.svg');
   background-size: 24px;
+  background-color: transparent;
+  background-position: center;
+  border: none;
   width: 24px;
   height: 24px;
   margin-left: -24px;
   position: relative;
   left: calc(24px + 18px);
-}
-
-.profile__edit-button:hover {
-  cursor: pointer;
-  opacity: .6;
 }
 
 @media screen and (max-width: 700px) {
