--- a/blocks/page-input/page-input.css
+++ b/blocks/page-input/page-input.css
@@ -1,9 +1,8 @@
-.popup__input-text {
+.page-input {
   font-family: inherit;
   font-weight: normal;
   font-size: 14px;
   line-height: 2;
   border: none;
   border-bottom: 1px solid rgba(0, 0, 0, .2);
-  margin-top: 30px;
 }
