--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -1,10 +1,14 @@
 .popup {
   font-family: 'Inter', 'Arial', sans-serif;
   color: #000;
-  display: none;
+  display: flex;
+  visibility: hidden;
   position: fixed;
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, .5);
   z-index: 1;
+  opacity: 0;
+  transition: visibility 1s linear;
+  transition: opacity 1s linear;
 }
