--- a/pages/index.css
+++ b/pages/index.css
@@ -22,6 +22,11 @@
 @import url(../blocks/popup/__edit-description/popup__edit-description.css);
 @import url(../blocks/popup/__save-button/popup__save-button.css);
 
+@import url(../blocks/viewer/viewer.css);
+@import url(../blocks/viewer/__container/viewer__container.css);
+@import url(../blocks/viewer/__image/viewer__image.css);
+@import url(../blocks/viewer/__title/viewer__title.css);
+
 @import url(../blocks/content/__profile/content__profile.css);
 
 @import url(../blocks/profile/profile.css);
@@ -41,6 +46,7 @@
 @import url(../blocks/element/__title/element__title.css);
 @import url(../blocks/element/__like/element__like.css);
 @import url(../blocks/element/__like/_active/element__like_active.css);
+@import url(../blocks/element/__trash/element__trash.css);
 
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/footer/__copyright/footer__copyright.css);
