--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -9,6 +9,5 @@
   background-color: rgba(0, 0, 0, .5);
   z-index: 1;
   opacity: 0;
-  transition: visibility 1s linear;
-  transition: opacity 1s linear;
+  transition: visibility .6s, opacity .6s linear;
 }
