--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -7,6 +7,7 @@
   width: 24px;
   height: 24px;
   margin-left: -24px;
+  margin-right: calc(24px + 18px + 10px);
   position: relative;
   left: calc(24px + 18px);
 }
