--- a/pages/index.css
+++ b/pages/index.css
@@ -3,6 +3,7 @@
 
 @import url(../blocks/page-hover/page-hover.css);
 @import url(../blocks/page-input/page-input.css);
+@import url(../blocks/page-input/_error/page-input_error.css);
 
 @import url(../blocks/body/body.css);
 
@@ -20,7 +21,9 @@
 @import url(../blocks/popup/__title/popup__title.css);
 @import url(../blocks/popup/__edit-name/popup__edit-name.css);
 @import url(../blocks/popup/__edit-description/popup__edit-description.css);
+@import url(../blocks/popup/__input-error/popup__input-error.css);
 @import url(../blocks/popup/__save-button/popup__save-button.css);
+@import url(../blocks/popup/__save-button/_inactive/popup__save-button_inactive.css);
 
 @import url(../blocks/viewer/viewer.css);
 @import url(../blocks/viewer/__container/viewer__container.css);
