--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -8,6 +8,7 @@
   position: relative;
   z-index: 2;
   min-width: 430px;
+  max-width: 430px;
   min-height: 330px;
   padding: 36px;
   box-sizing: border-box;
