--- a/blocks/popup/__save-button/_inactive/popup__save-button_inactive.css
+++ b/blocks/popup/__save-button/_inactive/popup__save-button_inactive.css
@@ -3,9 +3,5 @@
   border: 1px solid #000;
   color: #000;
   opacity: .2;
-}
-
-.popup__save-button_inactive:hover {
-  cursor: auto;
-  opacity: .2
+  pointer-events: none;
 }
