fix: исправить удаление карточки

--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -37,6 +37,7 @@
 @import url(../blocks/profile/__edit-button/profile__edit-button.css);
 @import url(../blocks/profile/__avatar/profile__avatar.css);
 @import url(../blocks/profile/__edit-avatar/profile__edit-avatar.css);
+@import url(../blocks/profile/__edit-icon/profile__edit-icon.css);
 @import url(../blocks/profile/__info/profile__info.css);
 @import url(../blocks/profile/__flex-row/profile__flex-row.css);
 @import url(../blocks/profile/__name/profile__name.css);
