--- a/src/blocks/profile/__avatar/profile__avatar.css
+++ b/src/blocks/profile/__avatar/profile__avatar.css
@@ -5,4 +5,9 @@
   overflow: hidden;
   object-fit: cover;
   object-position: center;
+  background-size: 24px;
+  background-repeat: no-repeat;
+  background-color: transparent;
+  background-position: center;
+  border: none;
 }
