--- a/src/blocks/profile/__edit-avatar/profile__edit-avatar.css
+++ b/src/blocks/profile/__edit-avatar/profile__edit-avatar.css
@@ -1,11 +1,6 @@
 .profile__edit-avatar {
-  background-size: 24px;
-  background-repeat: no-repeat;
+  display: flex;
   background-color: transparent;
-  background-position: center;
   border: none;
-}
-
-.profile__edit-avatar:hover {
-  background-image: url('./../../../images/profile/edit-avatar.svg');
+  position: relative;
 }
